# kdenlive

./: CMakeLists.txt
jackctl/: CMakeLists.txt  kdenlive_jackctl.cpp
src/: CMakeLists.txt  customtrackview.cpp  customtrackview.h  jackslave.cpp  jackslave.h  kdenlivesettingsdialog.cpp  kdenliveui.rc  mainwindow.cpp  mainwindow.h  monitor.cpp  renderer.cpp  renderer.h
